# yaddnsc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .rules  CMakeLists.txt  DRIVERS.md  DRIVERS_CN.md  Dockerfile  LICENSE  LICENSE-3RD-PARTY  README.md  README_CN.md  config.example.json  config.json  yaddnsc.service
.github/workflows/: build.yml  ci.yml  nightly.yml
cmake/: CPM.cmake  ClangTidy.cmake  CompilerSettings.cmake  Dependencies.cmake  Doxygen.cmake  FeatureCheck.cmake  FindFilesystem.cmake  GitVersion.cmake  InstallRules.cmake  Packaging.cmake  ReleaseInfo.cmake  Sanitizer.cmake  SanitizerCheck.cmake  ValidateIpAddress.cmake
docker/: Dockerfile.deb  Dockerfile.ubuntu  build-deb.sh
driver/: CMakeLists.txt  base_driver.h  driver.h  missing_required_param_exception.h
driver/alibaba_cloud/: CMakeLists.txt  alibaba_cloud.cpp  alibaba_cloud.h  config.hpp  response.hpp
driver/cloudflare/: CMakeLists.txt  cloudflare.cpp  cloudflare.h  config.hpp  response.h  response.hpp
driver/digital_ocean/: CMakeLists.txt  config.hpp  digital_ocean.cpp  digital_ocean.h  response.h  response.hpp
driver/dnspod/: CMakeLists.txt  config.hpp  dnspod.cpp  dnspod.h  response.h  response.hpp
driver/duckdns/: CMakeLists.txt  config.hpp  duckdns.cpp  duckdns.h
driver/godaddy/: CMakeLists.txt  config.hpp  godaddy.cpp  godaddy.h
driver/linode/: CMakeLists.txt  config.hpp  linode.cpp  linode.h  response.hpp
driver/namecheap/: CMakeLists.txt  config.hpp  namecheap.cpp  namecheap.h
driver/porkbun/: CMakeLists.txt  config.hpp  porkbun.cpp  porkbun.h  response.hpp
driver/route53/: CMakeLists.txt  config.hpp  route53.cpp  route53.h
driver/simple/: CMakeLists.txt  simple.cpp  simple.h
driver/vultr/: CMakeLists.txt  config.hpp  response.hpp  vultr.cpp  vultr.h
drivers/: CMakeLists.txt
drivers/cloudflare/: CMakeLists.txt  cloudflare.cpp  cloudflare.h
drivers/digital_ocean/: CMakeLists.txt  digital_ocean.cpp  (+1 more)
include/: IDriver.h  address_family.h  cache.h  cert_util.h  common_fwd.h  config.h  config_cmake.h.in  context.h  core_logger.h  dns.h  dns_error.h  dns_type.h  driver_interface.h  driver_manager.h  driver_ver.h.in  filesystem.h  fmt.h  fmt.hpp  http_client_interface.h  http_fmt.hpp  http_request_formatter.hpp  http_type.h  http_type_formatter.hpp  http_types.h  httpclient.h  ip_util.h  logging_pattern.h  manager.h  mixin.h  network_util.h  non_copyable.h  record_kind.h  signing.h  stop_token_compat.h  string_util.h  string_util.hpp  thread_pool.hpp  type.h  uri.h  util.h  (+3 more)
src/: app_context.h  base_classes.h  cert_util.cpp  config.cpp  config.h  config_parser.h  config_validator.cpp  config_validator.h  context.cpp  context.h  core_logger.cpp  dns.cpp  dns.h  dns_mkquery.cpp  dns_mkquery.h  dns_parser.cpp  dns_parser.h  dns_record_parser.cpp  dns_record_parser.h  dns_resolver.cpp  dns_resolver.h  doh_resolver.cpp  doh_resolver.h  dot_resolver.cpp  dot_resolver.h  driver_manager.cpp  driver_manager.h  generic_resource.h  http_client.cpp  http_client.h  httpclient.cpp  ip_util.cpp  ip_util.h  ip_util_http.cpp  logging_pattern.h  main.cpp  manager.cpp  manager.h  network_manager.cpp  network_manager.h  (+15 more)
test/: CMakeLists.txt
test/ci-sim/: Dockerfile  Dockerfile.musl  run.sh
test/component/: CMakeLists.txt  cert_util_test.cpp  classic_native_resolver_test.cpp  dns_server.py  doh_resolver_test.cpp  doh_server.py  dot_resolver_test.cpp  dot_server.py  factory_mdns_test.cpp  http_test.cpp  ip_source_test.cpp  net_devices_test.cpp  socket_test.cpp  tls_connection_test.cpp  tls_echo_server.py  tls_stream_test.cpp
test/driver/: CMakeLists.txt  alibaba_cloud_driver_test.cpp  base_driver_test.cpp  cloudflare_driver_test.cpp  digital_ocean_driver_test.cpp  dnspod_driver_test.cpp  duckdns_driver_test.cpp  factory_test_helpers.h  godaddy_driver_test.cpp  linode_driver_test.cpp  namecheap_driver_test.cpp  porkbun_driver_test.cpp  route53_driver_test.cpp  simple_driver_test.cpp  vultr_driver_test.cpp
test/fixtures/: dispatcher_tests.h  sample_config.h
test/integration/: CMakeLists.txt  requirements.txt  run_ci.sh  run_ctest.sh
test/integration/configs/: config.classic.json  config.doh.iface.json  config.doh.json  config.dot.json
test/integration/sim/: Dockerfile  requirements.txt  server.py
test/mocks/: mock_driver.h  mock_driver_manager.h  mock_http_client.h  mock_ip_source.h  mock_resolver.h  mock_socket.h  mock_stream.h  mock_tls_connection.h
test/perf/: CMakeLists.txt  builder_bench.cpp  dns_parser_bench.cpp  inet_address_bench.cpp  socket_addr_bench.cpp  string_util_bench.cpp  uri_bench.cpp
test/unit/: CMakeLists.txt  address_family.cpp  algorithm.cpp  bytes.cpp  cache.cpp  config_parser.cpp  config_types.cpp  config_validator.cpp  dispatcher_system.cpp  dns_error.cpp  dns_parser.cpp  dns_parser_native.cpp  dns_type.cpp  dns_util.cpp  dns_validator.cpp  exception.cpp  fmt_polyfill.cpp  http_type.cpp  mixin.cpp  mkquery.cpp  random.cpp  record_kind.cpp  resolver_base.cpp  retry_util.cpp  scheduler.cpp  string_util.cpp  updater.cpp  uri.cpp  validation.cpp
test/unit/common/: http_type_test.cpp  resolver_base_test.cpp
test/unit/config/: config_loader_test.cpp  config_validator_test.cpp
test/unit/core/: driver_loader_test.cpp  scheduler_test.cpp  updater_test.cpp
test/unit/dns/: builder_test.cpp  dispatcher_system_test.cpp  dispatcher_test.cpp  dns_util_test.cpp  dns_validator_test.cpp  doh_resolver_mock_test.cpp  dot_resolver_mock_test.cpp  factory_test.cpp  mkquery_test.cpp  parser_native_test.cpp  parser_test.cpp  resolver_registry_test.cpp
test/unit/http/: body_parser_test.cpp  exchange_test.cpp  header_parser_test.cpp  request_test.cpp
test/unit/ip_source/: driver_exceptions_test.cpp  driver_magic_test.cpp  mdns_mock_test.cpp
test/unit/network/: inet_address_test.cpp  socket_addr_test.cpp  socket_mock_test.cpp  tls_stream_test.cpp  uri_edge_test.cpp  uri_encode_test.cpp  uri_parse_test.cpp  uri_query_test.cpp
test/unit/util/: fd_test.cpp  fmt_polyfill_test.cpp  http_parser_test.cpp  random_test.cpp  retry_util_test.cpp  signing_test.cpp
(+240 files in other folders)
